[project]
name = "gelo"
version = "6.0.1"
description = "podcast chapter metadata gathering tool for podcast creators"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests",
  "irc",
  "toml"
]

[project.scripts]
gelo = "gelo.command_line:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
